fixed green bar stretching

--- a/react-app/src/components/HomePage/HomePage.css
+++ b/react-app/src/components/HomePage/HomePage.css
@@ -69,7 +69,7 @@
     align-items: center;
     margin-left: auto;
     margin-right: auto;
-    min-width: 77rem;
+    min-width: 80rem;
     padding-left: 1rem;
     padding-right: 1rem;
     margin-top: 1rem;
@@ -138,14 +138,14 @@
 
 .feature-project-holder {
     width: 55%;
-    padding-right: 4rem;
+    padding-right: 3rem;
     display: flex;
     flex-direction: column;
 }
 
 .rec-holder {
     width: 45%;
-    padding-left: 4rem;
+    padding-left: 3rem;
     border-left: 1px lightgray solid;
 }
 
@@ -160,6 +160,15 @@
     /* display: flex;
     flex-wrap: wrap;
     justify-content: flex-start; */
+}
+
+.img {
+    object-fit: cover;
+    /* object-fit: fill; */
+    width: 100%;
+    max-height: 20rem;
+    /* border-radius: 20px; */
+    /* object-fit: cover; */
 }
 
 .feature-title {
