--- a/react-app/src/components/Search/Search.css
+++ b/react-app/src/components/Search/Search.css
@@ -118,3 +118,7 @@
     font-size: 1.6rem;
     color: #028858;
 }
+
+.search-progressbar-container {
+    max-width: 100%;
+}
