--- a/react-app/src/components/SingleProject/SingleProject.css
+++ b/react-app/src/components/SingleProject/SingleProject.css
@@ -130,7 +130,7 @@
 }
 
 .sp-green-bar {
-    width: 10em;
+    max-width: 100%;
     height: .5em;
     background-color: #028858;
 }
